fix: change navigation position on tablet and mobile devices

--- a/pages/main/styles/style.scss
+++ b/pages/main/styles/style.scss
@@ -107,7 +107,7 @@ body {
     }
     header.navigation {
       background-color: white;
-      height: 350px;
+      height: 329px;
       justify-content: flex-start;
       z-index: 20;
 
@@ -193,26 +193,24 @@ body {
 
   header.navigation {
     width: 100vw;
-    height: 34px;
-    padding: 3px 10px;
     background-color: #000000;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 4000;
-
-    @media (max-width: 640px) {
-      position: fixed;
-    }
 
     @media (min-width: 640px) {
       padding: 0 20px;
     }
 
     @media (min-width: 1000px) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
       height: 80px;
       padding: 0 30px;
     }
@@ -225,6 +223,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0 20px;
 
       @media (min-width: 640px) {
         width: 600px;
